# plexome-core

./: CMakeLists.txt  CONTRIBUTING.md  README.md
include/: benchmark.h  bootstrap_manager.h  cli_interface.h  config_loader.h  connection_manager.h  consensus_engine.h  dns_discovery.h  gossip_service.h  inference_engine.h  integrity_checker.h  knowledge_manager.h  lora_registry.h  memory_manager.h  module_interface.h  network_bus.h  network_config.h  node.h  plexome_types.h  protocol.h  pxm_platform.h  shard_storage.h  stats_collector.h  swarm_router.h  task_manager.h  training_controller.h  web_api.h  web_ui.h
models/: .gitignore
modules/ai/: pxm_ai.cpp
modules/bench/: pxm_bench.cpp
modules/dashboard/: pxm_dashboard.cpp
modules/network/: pxm_network.cpp
modules/security/: pxm_security.cpp
modules/sharder/: pxm_sharder.cpp
modules/topology/: pxm_topology.cpp
modules/updater/: pxm_updater.cpp
scripts/: download_models.ps1  download_models.sh  setup_models.sh
src/core/: benchmark.cpp  config_loader.cpp  consensus_engine.cpp  inference_engine.cpp  integrity_checker.cpp  knowledge_manager.cpp  main.cpp  memory_manager.cpp  node.cpp  shard_storage.cpp  stats_collector.cpp  task_manager.cpp  training_controller.cpp
src/host/: main.cpp
src/network/: bootstrap_manager.cpp  connection_manager.cpp  gossip_service.cpp  lora_registry.cpp  swarm_router.cpp
